[gd_scene load_steps=2 format=3 uid="uid://dxgrbimctxxhm"]

[ext_resource type="Script" path="res://studio/ui/combo/slider_value.gd" id="1"]

[node name="SliderValue" type="HBoxContainer"]
offset_right = 380.0
offset_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "SliderValue"

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0

[node name="Value" type="Label" parent="."]
visible = false
layout_mode = 2
text = "0"

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 2
max_value = 10.0

[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
